# Space

./: main.py  people.csv  pyproject.toml
home_work/home_work_13_1/: csv_func.py
ls_12_2/: ls_13_1_2.py
ls_13_1_2/: county_dict.py  students_csv.py
ls_13_1_2/csv_files/: county_dict.csv
ls_13_1_3/: panda.py  pandas_1.py  pandas_2.py  task_1.py  titanic_1.csv  titanic_2.json
tests/: conftest.py  test_titanic_sort_table.py
